tests/rosetta/out/C/averages-mean-time-of-day.error
type error: error[T007]: argument 3: expected int, got bigint
  --> /workspace/mochi/tests/rosetta/x/Mochi/averages-mean-time-of-day.mochi:58:16

 58 |   return digit(substring(s, idx, idx+1))*10 + digit(substring(s, idx+1, idx+2))
    |                ^

help:
  Ensure the argument type matches the function’s signature.